tests/snapshots/execution_spec__showcase.md_test_2.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "Invalid Config URL specified"
      }
    ]
  }
}
