tests/snapshots/execution_spec__simple-graphql.md_assert_1.snap
---
source: tests/execution_spec.rs
expression: response
---
status: 200
headers:
  content-type: application/json
body:
  data: ~
  errors:
    - message: "Unexpected GraphQL Request: invalid type: map, expected a string at line 1 column 9"

