tests/snapshots/execution_spec__simple-http2.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(cert: "../server/config/example.crt", key: "../server/config/example-ec.key", version: "HTTP2") @upstream(baseURL: "http://jsonplaceholder.typicode.com") {
  query: Query
}

type Query {
  firstUser: User @http(path: "/users/1")
}

type User {
  id: Int
  name: String
}
