tests/snapshots/execution_spec__simple-query.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Query {
  firstUser: User
}

scalar Url

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
