tests/snapshots/execution_spec__test-add-field-list.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type A {
  b: B
}

type B {
  c: String
}

scalar Date

scalar Email

type Foo {
  a: A
}

scalar JSON

scalar PhoneNumber

type Query {
  b: B
  foo: [Foo]
}

scalar Url

schema {
  query: Query
}
