tests/snapshots/execution_spec__test-add-field.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @upstream(baseURL: "http://jsonplacheholder.typicode.com") {
  query: Query
}

type A {
  b: B
}

type B {
  c: String
}

type Foo {
  a: A
}

type Query @addField(name: "b", path: ["foo", "a", "b"]) {
  foo: Foo @http(path: "/foo")
}
